--- a/indecison-app/.eslintrc
+++ b/indecison-app/.eslintrc
@@ -17,7 +17,8 @@
             "never"
         ],
         "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
-        "react/jsx-indent": [4, 0],
+        //"react/jsx-indent": [4, 0],
+        "react/jsx-indent": [4, 4],
         "no-unused-vars": [
             "error",
             {
